--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+	<classpathentry kind="lib" path="/Users/Bill_Cheng/Desktop/Graduate Courses/2016Spring/Machine Learning/Project 1/DecisionTree/opencsv-3.7.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
